# memotrackingapp

./: .gitignore  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
.kiro/specs/memo-tracking-approval-system/: .config.kiro  design.md  requirements.md  tasks.md
alembic/: env.py
alembic/versions/: f41a61136685_initial_schema.py
app/: main.py
app/adapters/: __init__.py
app/adapters/local/: __init__.py  local_storage_adapter.py  mock_face_recognition_adapter.py  mock_notification_adapter.py  mock_text_to_speech_adapter.py  mock_voice_command_adapter.py  mock_voice_transcription_adapter.py
app/core/: config.py  database.py  dependencies.py  exception_handlers.py  exceptions.py
app/interfaces/: __init__.py  face_recognition_interface.py  notification_interface.py  storage_interface.py  text_to_speech_interface.py  voice_command_interface.py  voice_transcription_interface.py
app/models/: __init__.py  approval_action.py  approval_stage.py  approval_title.py  approval_title_role.py  approval_workflow.py  audit_log.py  base.py  face_profile.py  feature_toggle.py  memo.py  memo_approval_snapshot.py  memo_attachment.py  memo_category.py  notification.py  role.py  role_permission.py  speaker_profile.py  user.py
app/tests/: conftest.py  factories.py  hypothesis_config.py  test_config.py  test_exceptions.py  test_main.py  test_models.py  utils.py
