[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memo-tracking-approval-system"
version = "0.1.0"
description = "Document (Memo) Tracking and Approval System for a Nigerian Government Agency"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.3",
    "sqlalchemy[asyncio]==2.0.41",
    "asyncpg==0.30.0",
    "alembic==1.15.2",
    "pydantic==2.11.3",
    "pydantic-settings==2.9.1",
    "python-jose[cryptography]==3.4.0",
    "python-multipart==0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "httpx==0.28.1",
    "hypothesis==6.131.15",
    "factory-boy==3.3.3",
    "aiosqlite==0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
